Removed ring-right to solve overflow-x

--- a/style.css
+++ b/style.css
@@ -6,13 +6,6 @@
   --black: #1a1a1a;
 }
 
-.main {
-  overflow-x: hidden;
-  overflow-y: hidden;
-  width: 100%;
-  height: 100%;
-}
-
 body {
   margin: 0;
   background-color: var(--black);
@@ -150,14 +143,6 @@ body {
   top: -200px;
 }
 
-.ring--right {
-  border-style: dot-dash;
-  right: -100px;
-  bottom: 300px;
-  border-width: 30px;
-  width: 150px;
-  height: 150px;
-}
 
 .ring--down_left {
   border-style: dot-dash;
@@ -393,10 +378,6 @@ body {
     bottom: -125px;
   }
 
-  .ring--right {
-    right: -150px;
-  }
-
   .main_title {
     font-size: 4em;
     margin-top: 200px;
@@ -488,13 +469,6 @@ body {
     width: 134px;
     height: 134px;
   }
-  .ring--right {
-    border-width: 12px;
-    width: 134px;
-    height: 134px;
-    right: -80px;
-    bottom: 350px;
-  }
 }
 
 @media screen and (max-width: 700px) {
@@ -532,13 +506,6 @@ body {
     top: -76px;
   }
 
-  .ring--right {
-    border-width: 12px;
-    width: 70px;
-    height: 70px;
-    right: -65px;
-    top: 150px;
-  }
 
   .headtitles {
     margin-top: 100px;
